:wrench: add ng material for custom icon

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.0.0",
     "scripts": {
         "ng": "ng",
-        "start": "ng serve",
+        "start": "ng serve --port 4503",
         "build": "ng build",
         "test": "ng test",
         "lint": "ng lint",
@@ -17,6 +17,7 @@
         "@angular/core": "^6.1.0",
         "@angular/forms": "^6.1.0",
         "@angular/http": "^6.1.0",
+        "@angular/material": "^6.4.7",
         "@angular/platform-browser": "^6.1.0",
         "@angular/platform-browser-dynamic": "^6.1.0",
         "@angular/router": "^6.1.0",
